# os

./: LICENSE  cpio.c  cross.ini  fdt.c  kthread.c  meson.build  process.c  syscall.c
arch/aarch64/: exceptions.S  exceptions.c  exec.S  init.S  kthread.S  linker.ld  signals.S  timer.S  timer.c  vmem.c
arch/aarch64/machines/: rpi3.c
con/: rpi3_mini_uart.S  rpi3_mini_uart.c
console/: bcm2835_mini_uart.S  bcm2835_mini_uart.c  cio.c  kio.c  rpi3_mini_uart.c
dev/: console.c  framebuffer.c  sdcard.c
fs/: fat32.c  initrd.c  tmpfs.c  vfs.c
include/: bcm2835_ic.h  bcm2835_mailbox.h  bcm2835_mini_uart.h  bcm2835_mmio.h  bcm2836_ic.h  con.h  console.h  cpio.h  endianness.h  errno.h  exceptions.h  fdt.h  init.h  kio.h  kshell.h  kthread.h  mmio.h  page.h  pm.h  process.h  rpi3_mini_uart.h  stdlib.h  string.h  syscall.h  timer.h  vfs.h  vmem.h
include/aarch64/: registers.h  vmem.h
init/: kshell.c  main.c
klibc/: stdlib.c  string.c
mem/: malloc.c  page.c  prepage.c
subprojects/userspace/: meson.build
subprojects/userspace/arch/aarch64/: echo.S  fork.S  linker.ld  loop.S  svc.S
